--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-background:url(github.com/hkklemola/hkklemola.github.io/blob/main/slotho.jpg)
+background:url(hkklemola.github.io/blob/main/slotho.jpg)
 	<body>
 		<h1>Jeejee</h1>
 		<p>Tässä lukee jotain</p>
