--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-background:url(hkklemola.github.io/blob/main/slotho.jpg)
+	<style>
+		background:url(hkklemola.github.io/blob/main/slotho.jpg)
+	</style>
+	
 	<body>
 		<h1>Jeejee</h1>
 		<p>Tässä lukee jotain</p>
