--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<style>
-		background:url(hkklemola.github.io/blob/main/slotho.jpg)
+		background:url(https://raw.githubusercontent.com/hkklemola/hkklemola.github.io/main/slotho.jpg);
 	</style>
 	
 	<body>
