--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<h1> Heikin Sivu </h1>
+	</head>
+	
 	<body>
-		<h1>Jeejee</h1>
+		<h2>Jeejee</h2>
 		<p>Tässä lukee jotain</p>
 	</body>
 </html>
