--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8"/>
 		<h1> Heikin Sivu </h1>
 	</head>
 	
 	<body>
-		<h2>Jeejee</h2>
+		<p> JeeJee </p>
 		<p>Tässä lukee jotain</p>
 	</body>
 </html>
