--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8"/>
-		<title> Heikin Sivu </title>
-		<h1> Superhieno kotisivu </h1>
+		<h1> Heikin Sivu </h1>
+		<h2> Superhieno Kotisivu </h2>
 	</head>
 	
 	<body>
