--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<style>
+			h1 {text-align: center;}
+			h2 {text-align: center;}
+		</style>
 		<meta charset="utf-8"/>
 		<h1> Heikin Sivu </h1>
 		<h2> Superhieno Kotisivu </h2>
