--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 		<style>
 			h1 {text-align: center;}
 			h2 {text-align: center;}
+			body {
+ 				 background-image: url(slotho.jpg);
+			}
 		</style>
 		<meta charset="utf-8"/>
 		<h1> Heikin Sivu </h1>
