--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
 		<style>
 			h1 {text-align: center;}
 			h2 {text-align: center;}
+				
+			head {
+				color: white;
+				}
+				
 			body {
+				color: white;
  				 background-image: url(slotho.jpg);
-			}
+				}
+			
 		</style>
 		<meta charset="utf-8"/>
 		<h1> Heikin Sivu </h1>
