--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html>
 	<head>
 		<style>
-			h1 {text-align: center;}
-			h2 {text-align: center;}
+			h1 {text-align: center;
+				font-size:30px;
+			}
+			h2 {text-align: center;
+				font-size:20px;	
+			}
 				
 			head {
 				color: white;
@@ -17,7 +21,7 @@
 		</style>
 		<meta charset="utf-8"/>
 		<h1> Heikin Sivu </h1>
-		<h2> Superhieno Kotisivu </h2>
+		<h2 style="font-size:20px"> Superhieno Kotisivu </h2>
 	</head>
 	
 	<body>
