--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 	<head>
 		<style>
 			h1 {text-align: center;
-				font-size:30px;
+				font-size:60px;
 			}
 			h2 {text-align: center;
-				font-size:20px;	
+				font-size:40x;	
 			}
 				
 			head {
