--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 				
 			head {
 				color: white;
-				background-color: black:
+				background-color: black;
+				font-family:Comic Sans;
 				}
 				
 			body {
