--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
 		<style>
 			h1 {text-align: center;
 				font-size:60px;
-				background-color: black;
-				font-family:Comic Sans;
+				background-color: black;		
 			}
 			h2 {text-align: center;
 				font-size:40x;
 				background-color: black;
-				font-family:Comic Sans;
 			}
 				
 			head {
@@ -25,7 +23,7 @@
 		</style>
 		<meta charset="utf-8"/>
 		<h1> Heikin Sivu </h1>
-		<h2 style="font-size:20px"> Superhieno Kotisivu </h2>
+		<h2> Superhieno Kotisivu </h2>
 	</head>
 	
 	<body>
