--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				
 			body {
 				color: white;
- 				 background-image: url(slotho.jpg);
+ 				background-color: black;
 				}
 			
 		</style>
