--- a/styles.html
+++ b/styles.html
@@ -1,7 +1,18 @@
 <html>
+  
   <head>
-  <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
+    </h1> Tässä headeri blockissa on jotain tekstiä </h2>
   </head>
+  
   <body>
+    <p> Tässä on myös tekstiä </p>
+    <div> </div>
+    
+    <ol>
+      <li> Ensimmäinen asia </li>
+      <li> Toinen asia</li>
+      <li> Kolmas asia</li>
   </body>
+
 </html>
