--- a/styles.html
+++ b/styles.html
@@ -7,7 +7,7 @@
   
   <body>
      <p> Tässä on myös tekstiä </p>
-     <div> </div>
+     <div class="dotted"> </div>
     
      <ol>    
         <li> Ensimmäinen asia </li>
