--- a/styles.html
+++ b/styles.html
@@ -1,7 +1,9 @@
 <html>
   
     <head>
-      <link rel="stylesheet" href="styles.css">
+      <style>
+         <link rel="stylesheet" href="styles.css">
+      </style>
        </h1> Tässä headeri blockissa on jotain tekstiä </h2>
      </head>
   
