--- a/styles.html
+++ b/styles.html
@@ -1,5 +1,6 @@
+<!DOCTYPE html">
+<html lang="en">
 <html>
-  
     <head>
          <link rel="stylesheet" href="styles.css">
          </h1> Tässä headeri blockissa on jotain tekstiä </h2>
@@ -21,6 +22,5 @@
       <li>lisää nakkeja</li>
     </ul>
     
-</body>
-
+  </body>
 </html>
