--- a/styles.html
+++ b/styles.html
@@ -3,7 +3,7 @@
 <html>
     <head>
          <link rel="stylesheet" href="styles.css">
-         </h1> Tässä headeri blockissa on jotain tekstiä </h2>
+         <h1> Tässä headeri blockissa on jotain tekstiä </h1>
     </head>
   
   <body>
