--- a/styles.html
+++ b/styles.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+         <title> Sivun otsikko </title>
          <link rel="stylesheet" href="styles.css">
-         <h1>Tässä headeri blockissa on jotain tekstiä</h1>
     </head>
   
   <body>
-     <p> Tässä on myös tekstiä </p>
+      <h1>Tässä headeri blockissa on jotain tekstiä</h1>
+      <p> Tässä on myös tekstiä </p>
      <div class="dotted"> </div>
     
      <ol>    
