--- a/styles.html
+++ b/styles.html
@@ -10,13 +10,13 @@
       <p>Tässä on myös tekstiä</p>
      <div class="dotted"></div>
     
-     <ol class="a">    
+     <ol class="b">    
        <li>Ensimmäinen asia</li>
        <li>Toinen asia</li>
        <li>Kolmas asia</li>
      </ol>
   
-    <ul class="b">
+    <ul class="a">
       <li>nakkeja</li>
       <li>pekonia</li>
       <li>lisää nakkeja</li>
