--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
 	<body>
 		<p> JeeJee </p>
 		<p>Tässä lukee jotain</p>
-		<a href="second.html">
+		<a href="second.html">Toinen Sivu</a>
 	</body>
 </html>
