--- a/second.html
+++ b/second.html
@@ -10,6 +10,6 @@
 	<a href="index.html">Takaisin etusivulle>
     <h1>Tässähän on jotain tekstiä</h1>
     <p>Ja niinpäs on tässäkin</p>
-    <img src="sorsot.jpg" alt="Tuplapyllistys">
+    <img src="sorsot.JPG" alt="Tuplapyllistys">
   </body>
 </html>
