--- a/second.html
+++ b/second.html
@@ -7,7 +7,7 @@
     </head>
   
   <body>
-	<a href="index.html">Takaisin etusivulle>
+	<a href="index.html">Takaisin etusivulle</a>
     <h1>Tässähän on jotain tekstiä</h1>
     <p>Ja niinpäs on tässäkin</p>
     <img src="sorsot.JPG" alt="Tuplapyllistys">
