--- a/second.html
+++ b/second.html
@@ -8,8 +8,8 @@
   
   <body>
 	<a href="index.html">Takaisin etusivulle</a>
-    <h1>Tässähän on jotain tekstiä</h1>
-    <p>Ja niinpäs on tässäkin</p>
+    <h1>Siinähän on sorsan pylly</h1>
+    <p>Ja näköjään toinenkin</p>
     <img src="sorsot.JPG" alt="Tuplapyllistys" width="800" height"600">
   </body>
 </html>
