--- a/second.html
+++ b/second.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
          <meta charset="UTF-8">
-         <title>Toisen sivun otsikko</title>
+         <title>Tällä sivulla on pyllistäviä sorsia</title>
          <link rel="stylesheet" href="styles.css">
     </head>
   
