--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
 			
 		</style>
 		<meta charset="utf-8"/>
-		<h1> Heikin Sivu </h1>
-		<h2> Superhieno Kotisivu </h2>
+		<title>Heikin Sivu</title>
 	</head>
 	
 	<body>
+		<h1> Heikin Sivu </h1>
+		<h2> Superhieno Kotisivu </h2>
 		<p> JeeJee </p>
 		<p>Tässä lukee jotain</p>
 		<a href="second.html">Toinen Sivu</a>
