--- a/second.html
+++ b/second.html
@@ -9,7 +9,7 @@
   <body>
 	<a href="index.html">Takaisin etusivulle</a>
     <h1>Siinähän on sorsan pylly</h1>
-    <img src="sorsot.JPG" alt="Tuplapyllistys" width="800" height"600">
+    <img src="sorsot.JPG" alt="Tuplapyllistys" width="800" height="600">
     <p>Ja näköjään toinenkin</p>
   </body>
 </html>
