--- a/second.html
+++ b/second.html
@@ -11,5 +11,9 @@
     <h1>Siinähän on sorsan pylly</h1>
     <img src="sorsot.JPG" alt="Tuplapyllistys" width="800" height="600">
     <p>Ja näköjään toinenkin</p>
+	<figure>
+		<img src="etane.jpg" alt="Etane" width="800" height="600">
+		<figcaption> Etane </figcaption>
+	</figure>
   </body>
 </html>
