--- a/second.html
+++ b/second.html
@@ -15,5 +15,7 @@
 		<img src="etane.jpg" alt="Etane" width="800" height="600">
 		<figcaption> Etane </figcaption>
 	</figure>
+	  <label for="prog">Progress:</label>
+	  <progress id="prog" value="50" max="100"> 50% </progress>
   </body>
 </html>
