--- a/second.html
+++ b/second.html
@@ -12,8 +12,8 @@
     <img src="sorsot.JPG" alt="Tuplapyllistys" width="800" height="600">
     <p>Ja näköjään toinenkin</p>
 	<figure>
-		<img src="Etane.jpg" alt="Etane" width="800" height="600">
-		<figcaption> Etane </figcaption>
+		<img src="Etane.jpg" alt="Etane" style=width="800" height="600">
+		<figcaption>Etane</figcaption>
 	</figure>
 	  <label for="prog">Progress:</label>
 	  <progress id="prog" value="50" max="100"> 50% </progress>
