--- a/second.html
+++ b/second.html
@@ -12,7 +12,7 @@
     <img src="sorsot.JPG" alt="Tuplapyllistys" width="800" height="600">
     <p>Ja näköjään toinenkin</p>
 	<figure>
-		<img src="Etane.jpg" alt="Etane" style=width="800" height="600">
+		<img src="Etane.jpg" alt="Etane" width="800" height="600">
 		<figcaption>Etane</figcaption>
 	</figure>
 	  <label for="prog">Progress:</label>
