--- a/second.html
+++ b/second.html
@@ -11,7 +11,7 @@
     <h1>Siinähän on sorsan pylly</h1>
     <img src="sorsot.JPG" alt="Tuplapyllistys" width="800" height="600">
     <p>Ja näköjään toinenkin</p>
-	  <p>Etanakin on päässyt mukaan</p>
+	  <h2>Etanakin on päässyt mukaan</h2>
 	<figure>
 		<img src="Etane.JPG" alt="Etane" width="800" height="600">
 		<figcaption>Etane</figcaption>
