--- a/second.html
+++ b/second.html
@@ -8,9 +8,9 @@
   
   <body>
 	<a href="index.html">Takaisin etusivulle</a>
-    <h1>Siinähän on sorsan pylly</h1>
+    <h1 id="h.solid">Siinähän on sorsan pylly</h1>
     <img src="sorsot.JPG" alt="Tuplapyllistys" width="800" height="600">
-    <p>Ja näköjään toinenkin</p>
+    <p id="rcorners1">Ja näköjään toinenkin</p>
 	  <h2>Etanakin on päässyt mukaan</h2>
 	<figure>
 		<img src="Etane.JPG" alt="Etane" width="800" height="600">
