--- a/second.html
+++ b/second.html
@@ -8,7 +8,7 @@
   
   <body>
 	<a href="index.html">Takaisin etusivulle</a>
-    <h1 id="h.solid">Siinähän on sorsan pylly</h1>
+    <h1 class="h.solid">Siinähän on sorsan pylly</h1>
     <img src="sorsot.JPG" alt="Tuplapyllistys" width="800" height="600">
     <p id="rcorners1">Ja näköjään toinenkin</p>
 	  <h2>Etanakin on päässyt mukaan</h2>
