--- a/lorem.html
+++ b/lorem.html
@@ -2,7 +2,7 @@
 <HTML lang="zxx">
 	<head>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="styles2.css">
 		<title>Tehtävä 5</title>
 	</head>
 	
