--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
 		<p> JeeJee </p>
 		<p>Tässä lukee jotain</p>
 		<a href="second.html">Toinen Sivu</a>
+		<a href="lorem.html">Lorem Ipsumia</a>
 	</body>
 </html>
